@@ -21,7 +21,7 @@
   </properties>
   <body>
 
-  <release version="4.0" date="2013-11-18" description="
+  <release version="4.0" date="2013-11-24" description="
 This is a major release: It combines bug fixes, new features and
 changes to existing features.
 
@@ -38,6 +38,11 @@ Commons Collections is Java 5.
 Users are encouraged to upgrade to this version as, in addition to new
 features, this release includes numerous bug fixes.
   ">
+    <action issue="COLLECTIONS-501" dev="tn" type="update">
+      Renamed methods "V MultiKeyMap#remove(Object, Object, ...)" to
+      "V MultiKeyMap#removeMultiKey(Object, Object, ...)" to avoid future conflicts
+      with a default method of the Map interface in Java 8.
+    </action>
     <action issue="COLLECTIONS-500" dev="tn" type="update">
       Renamed "V MultiMap#remove(K, V)" to "boolean MultiMap#removeMapping(K, V)"
       to avoid future conflicts with a default method of the Map interface in Java 8.
